correct ratio collage covers

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -17,21 +17,18 @@ ul.collage_images li {
 	border: none;
 	float: left;
 	margin: 0;
-	width: 118px;
-	height: 118px;
 	list-style: none;
 	list-style-type: none;
 }
 
 ul.collage_images li a {
     display: block;
-    height: 118px;
     overflow: hidden;
 }
 
 ul.collage_images img {
-	height: 118px;
-	width: 118px;
+	max-height: 180px;
+	max-width: 120px;
 }
 
 
